Fixed titles not showing the proper video name sometimes and thumbnail crop issue

--- a/static/style.css
+++ b/static/style.css
@@ -19,3 +19,27 @@
 #tableVideo th:first-child{
     width: 34.8%;
 }
+
+a{
+    text-decoration: none;
+    color: black;
+    position: relative;
+}
+a::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    border-radius: 4px;
+    background-color: #18272F;
+    bottom: 0;
+    left: 0;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform .3s ease-in-out;
+  }
+  
+  a:hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
+  }
